[gd_scene load_steps=15 format=3 uid="uid://brn3assiyadxe"]

[ext_resource type="Script" path="res://demo/subscenes/mash_wheel_with_drain_demo.gd" id="1_g72a8"]
[ext_resource type="PackedScene" uid="uid://c3jlb4w5qfd00" path="res://component_wheel.tscn" id="2_biibt"]
[ext_resource type="Script" path="res://wheel_logic/puzzle_handler/mash_wheel_puzzle.gd" id="3_6lku1"]

[sub_resource type="Resource" id="Resource_2beb7"]
script = ExtResource("3_6lku1")
value_per_tick = 40
disable_on_full = false
tick_rate = 20
complete_threshold = 0.66

[sub_resource type="Gradient" id="Gradient_xpmcq"]
colors = PackedColorArray(0.532108, 0.870836, 0.362331, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yhodk"]
gradient = SubResource("Gradient_xpmcq")
width = 32
height = 32
fill_to = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_e72qg"]
offsets = PackedFloat32Array(0, 0.167598)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_km0a7"]
gradient = SubResource("Gradient_e72qg")
width = 50
height = 50

[sub_resource type="Gradient" id="Gradient_n8xbc"]
colors = PackedColorArray(0.532108, 0.870836, 0.362331, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_73jhn"]
gradient = SubResource("Gradient_n8xbc")
width = 32
height = 32
fill_from = Vector2(1, 1)
fill_to = Vector2(0, 0)

[sub_resource type="Gradient" id="Gradient_j3qu1"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.167598)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0ciyj"]
gradient = SubResource("Gradient_j3qu1")
width = 50
height = 50

[sub_resource type="LabelSettings" id="LabelSettings_jndtq"]
font_size = 144
font_color = Color(0.57, 1, 0.613, 1)
shadow_size = 20
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(10, 10)

[sub_resource type="LabelSettings" id="LabelSettings_tksi2"]
font_size = 144
font_color = Color(1, 0.57, 0.57, 1)
shadow_size = 20
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(10, 10)

[node name="MashWheel" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g72a8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ComponentWheel" parent="VBoxContainer" instance=ExtResource("2_biibt")]
unique_name_in_owner = true
custom_minimum_size = Vector2(520, 520)
layout_mode = 2
puzzle_handler = SubResource("Resource_2beb7")
radius = 250.0
wheel_sections = 7

[node name="WheelSlices" parent="VBoxContainer/ComponentWheel" index="0"]
num_slices = 7
values = Array[int]([0])
max_value = 200
radius = 250.0

[node name="WheelSegments" parent="VBoxContainer/ComponentWheel" index="1"]
num_segments = 7
values = Array[int]([-2, -1, -2, -1, -3])
radius = 250.0

[node name="RenderedWheelOverlay" parent="VBoxContainer/ComponentWheel" index="2"]
num_borders = 7
radius = 250.0

[node name="WheelCovers" parent="VBoxContainer/ComponentWheel" index="3"]
num_covers = 7
radius = 250.0

[node name="WheelSelector" parent="VBoxContainer/ComponentWheel" index="4"]
num_positions = 7
radius = 250.0

[node name="TimerContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(550, 50)
layout_mode = 2
theme_override_constants/separation = 0

[node name="TimerBar" type="TextureRect" parent="VBoxContainer/TimerContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 0.39, 0.39, 1)
custom_minimum_size = Vector2(500, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = SubResource("GradientTexture2D_yhodk")
expand_mode = 1

[node name="TimerCap" type="TextureRect" parent="VBoxContainer/TimerContainer"]
self_modulate = Color(1, 0.53, 0.53, 1)
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = SubResource("GradientTexture2D_km0a7")

[node name="ScoreContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(550, 50)
layout_mode = 2
theme_override_constants/separation = 0

[node name="ScoreBar" type="TextureRect" parent="VBoxContainer/ScoreContainer"]
unique_name_in_owner = true
self_modulate = Color(0.205138, 0.724113, 0.516817, 1)
custom_minimum_size = Vector2(500, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = SubResource("GradientTexture2D_73jhn")
expand_mode = 1

[node name="Spacer" type="ColorRect" parent="VBoxContainer/ScoreContainer"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(1, 1, 1, 0)

[node name="ScoreCap" type="TextureRect" parent="VBoxContainer/ScoreContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = SubResource("GradientTexture2D_0ciyj")

[node name="WinLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "DRAIN
UNCLOGGED
"
label_settings = SubResource("LabelSettings_jndtq")
horizontal_alignment = 1

[node name="LoseLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "FLUSHED AWAY"
label_settings = SubResource("LabelSettings_tksi2")
horizontal_alignment = 1

[connection signal="new_segment_chosen" from="VBoxContainer/ComponentWheel" to="." method="_process_mash"]
[connection signal="puzzle_finished" from="VBoxContainer/ComponentWheel" to="." method="_win"]

[editable path="VBoxContainer/ComponentWheel"]
